--- a/src/components/features/CartMini/CartMini.module.scss
+++ b/src/components/features/CartMini/CartMini.module.scss
@@ -8,7 +8,7 @@
     z-index: 100;
     width: 100vw;
     height: 100%;
-    background: $white;
+    background: $cartOverlay;
     opacity: 0;
     display: block;
     visibility: hidden;
@@ -34,7 +34,6 @@
     width: 500px;
     height: 100%;
     padding-bottom: 50px;
-    background: $white;
     display: flex;
     flex-direction: column;
     transition: right 0.9s cubic-bezier(0.87, 0, 0.13, 1);
