--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -191,7 +191,7 @@ $product-root-color: $veryLightGray;
 $gallery-theme-color: $orange;
 $gallery-frame-medium-color: $mediumDarkGray;
 $gallery-frame-light-color: $veryLightGray;
-$gallery-background-color:  $lightGrayishBlue;
+$gallery-background-color: $lightGrayishBlue;
 $gallery-buttons-hints-color: $black;
 $gallery-price: $white;
 $gallery-price-bigger-font: $compare-color;
@@ -217,3 +217,4 @@ $cartPrice: $orange;
 $cartClose: $orange;
 $productBorder: $mediumGray;
 $productQuantity: $black;
+$cartOverlay: $white;
