Fix tabs in Gallery component

--- a/src/components/features/Gallery/Gallery.module.scss
+++ b/src/components/features/Gallery/Gallery.module.scss
@@ -66,6 +66,8 @@
     text-decoration: none;
     outline: none;
     @extend %hover-effect;
+    width: 100%;
+    background-color: $button-main-color;
 
     &.active,
     &:hover {
