After review code update

--- a/src/components/common/FilterByColor/FilterByColor.module.scss
+++ b/src/components/common/FilterByColor/FilterByColor.module.scss
@@ -41,7 +41,7 @@
   justify-content: start;
 }
 
-.Text {
+.text {
   color: $colorCategory-theme-color;
   margin-left: 0rem;
   color: $filterCategory-black-color;
